edition = "2023";

option go_package = "metrics/internal/proto/v1/model";

package metrics.go.grpc.v1.model;

message MetricsRequest {
  repeated Metric metrics = 1;
}

message Metric {
  string id = 1;
  string type = 2;
  int64 delta = 3;
  double value = 4;
}